--- a/UxUi/pagedown.ui
+++ b/UxUi/pagedown.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>Download</class>
  <widget class="QMainWindow" name="Download">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -16,12 +19,15 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(193, 255, 216);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="header_2">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>30</y>
+      <y>40</y>
       <width>381</width>
       <height>51</height>
      </rect>
